--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,17 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@hookform/resolvers": "^1.3.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "hover.css": "^2.3.2",
+    "react-hook-form": "^6.15.4",
     "react-scripts": "^4.0.2",
     "sass": "^1.32.7",
-    "socket.io-client": "^3.1.2"
+    "socket.io-client": "^3.1.2",
+    "yup": "^0.32.9"
   },
-  "devDependencies": {},
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start"
   },
