--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,11 +11,15 @@
     "@hookform/resolvers": "^1.3.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "hover.css": "^2.3.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
-    "react-scripts": "^4.0.2",
-    "sass": "^1.32.7",
-    "socket.io-client": "^3.1.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
+    "sass": "^1.32.8",
+    "socket.io-client": "^3.1.3",
     "yup": "^0.32.9"
   },
   "proxy": "http://localhost:5000",
@@ -23,5 +27,17 @@
     "start": "react-scripts start"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
