--- a/package.json
+++ b/package.json
@@ -2,13 +2,9 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "bootstrap": "lerna bootstrap",
-    "client": "cd packages/client && npm start",
-    "server": "cd packages/server && npm start",
-    "start": "concurrently --kill-others \"npm run server\" \"npm run client\""
+    "start": "lerna run start"
   },
   "devDependencies": {
-    "concurrently": "^6.0.0",
     "lerna": "^4.0.0",
     "nodemon": "^2.0.7"
   },
