--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "client",
+  "name": "@pyramid/client",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@craco/craco": "^6.1.1",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
@@ -11,6 +12,7 @@
     "@hookform/resolvers": "^1.3.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@pyramid/ui": "^0.0.0",
     "axios": "^0.21.1",
     "hover.css": "^2.3.2",
     "react": "^17.0.1",
@@ -24,7 +26,7 @@
   },
   "proxy": "http://localhost:5000",
   "scripts": {
-    "start": "react-scripts start"
+    "start": "craco start"
   },
   "author": "",
   "license": "ISC",
