--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   },
   "devDependencies": {
     "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.23.0",
     "lerna": "^4.0.0",
     "lint-staged": "^10.5.4",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1"
   },
   "workspaces": [
     "packages/*"
