--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "start": "lerna run start"
+    "start": "lerna run start",
+    "lint": "eslint --ext .js,.jsx ./"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
