--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "private": true,
   "scripts": {
     "start": "lerna run start",
-    "lint": "eslint --ext .js,.jsx ./"
+    "lint": "eslint --ext .js,.jsx ./",
+    "prepare": "husky install",
+    "postinstall": "husky install"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.0",
+    "husky": "^5.2.0",
     "lerna": "^4.0.0",
     "lint-staged": "^10.5.4",
     "nodemon": "^2.0.7",
