--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "lint-staged": {
     "*.(js|jsx)": [
       "prettier --write",
-      "npm run lint",
-      "git add"
+      "npm run lint"
     ]
   },
   "devDependencies": {
