--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,7 +26,8 @@
   },
   "proxy": "http://localhost:5000",
   "scripts": {
-    "start": "craco start"
+    "start": "SKIP_PREFLIGHT_CHECK=true craco start",
+    "build": "SKIP_PREFLIGHT_CHECK=true craco build"
   },
   "author": "",
   "license": "ISC",
@@ -41,5 +42,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@emotion/babel-plugin": "^11.2.0",
+    "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
+    "craco-babel-loader": "^0.1.4",
+    "eslint-plugin-prettier": "^3.3.1"
   }
 }
