--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "start": "lerna run start --stream",
+    "start": "lerna run start --stream --scope=@pyramid/client",
     "lint": "eslint --ext=.js,.jsx ./",
     "build": "lerna run build --concurrency 2 --stream",
     "prepare": "husky install",
@@ -16,6 +16,9 @@
     ]
   },
   "devDependencies": {
+    "craco": "0.0.3",
+    "craco-babel-loader": "^0.1.4",
+    "cross-env": "^7.0.3",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
