--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,8 +26,8 @@
   },
   "proxy": "http://localhost:5000",
   "scripts": {
-    "start": "SKIP_PREFLIGHT_CHECK=true craco start",
-    "build": "SKIP_PREFLIGHT_CHECK=true craco build"
+    "start": "cross-env SKIP_PREFLIGHT_CHECK=true craco start",
+    "build": "cross-env SKIP_PREFLIGHT_CHECK=true craco build"
   },
   "author": "",
   "license": "ISC",
