--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -36,6 +36,7 @@
     "babel-loader": "^8.2.2"
   },
   "dependencies": {
-    "@emotion/react": "^11.1.5"
+    "@emotion/react": "^11.1.5",
+    "polished": "^4.1.1"
   }
 }
