build: :green_heart: remove server as dependency (migrated to functions)

--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "packages/*"
   ],
   "dependencies": {
-    "client": "file:packages/client",
-    "server": "file:packages/server"
+    "client": "file:packages/client"
   }
 }
