--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,7 +26,7 @@
   },
   "proxy": "http://localhost:5000",
   "scripts": {
-    "start": "SKIP_PREFLIGHT_CHECK=true craco start",
+    "start": "SKIP_PREFLIGHT_CHECK=true REACT_APP_ENV=DEV craco start",
     "build": "SKIP_PREFLIGHT_CHECK=true craco build"
   },
   "author": "",
