--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,6 @@ stages:
   - initialize
   - build
   - test
-  - preview
   - deploy
 
 cache:
@@ -49,15 +48,16 @@ test:
   script:
     - echo test
 
-preview:
-  stage: preview
+preview_deploy:
+  stage: deploy
   only:
-    - master
-    - merge_requests
+    refs:
+      - master
+      - merge_requests
   script:
     - firebase hosting:channel:deploy $CI_COMMIT_REF_SLUG
 
-deploy:
+live_deploy:
   stage: deploy
   only:
     refs:
