--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ cache:
 initialize:
   stage: initialize
   script:
+    - echo $CI_PIPELINE_SOURCE
+    - echo $CI_DEFAULT_BRANCH
     - yarn
     - npx lerna bootstrap
 
