--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,10 +51,8 @@ test:
 
 preview:
   stage: preview
-  rules:
-    - if: '$CI_COMMIT_BRANCH != "$CI_DEFAULT_BRANCH"'
-      when: on_success
-    - when: never
+  only:
+    - merge_requests
   before_script:
     - npm install -g firebase-tools
   script:
