--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,24 +55,29 @@ preview:
     - merge_requests
   before_script:
     - npm install -g firebase-tools
+  needs:
+    - project: $CI_PROJECT_PATH
+      job: build:client
+      ref: $CI_COMMIT_REF_NAME
+      artifacts: true
   script:
-    - firebase hosting:channel:deploy $CI_COMMIT_REF_SLUG --non-interactive --token $FIREBASE_TOKEN
+    - firebase hosting:channel:deploy $CI_COMMIT_REF_SLUG --non-interactive --token=$FIREBASE_TOKEN
 
 deploy_client:
   stage: deploy
   only:
     refs:
-      - master
+      - $CI_DEFAULT_BRANCH
   before_script:
     - npm install -g firebase-tools
   script:
-    - firebase hosting:clone pyramid-64ab2:$CI_COMMIT_REF_SLUG pyramid-64ab2:live --non-interactive --token $FIREBASE_TOKEN
+    - firebase hosting:clone pyramid-64ab2:$CI_COMMIT_REF_SLUG pyramid-64ab2:live --non-interactive --token=$FIREBASE_TOKEN
 
 deploy_functions:
   stage: deploy
   only:
     refs:
-      - master
+      - $CI_DEFAULT_BRANCH
     changes:
       - functions/**/*
   before_script:
@@ -81,4 +86,4 @@ deploy_functions:
     - cd functions
     - npm install
     - cd ..
-    - firebase deploy --only functions --non-interactive --token $FIREBASE_TOKEN
+    - firebase deploy --only functions --non-interactive --token=$FIREBASE_TOKEN
