--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,12 +14,18 @@ cache:
 
 initialize:
   stage: initialize
+  only:
+    - merge_requests
+    - $CI_DEFAULT_BRANCH
   script:
     - yarn
     - npx lerna bootstrap
 
 build:ui:
   stage: build
+  only:
+    - merge_requests
+    - $CI_DEFAULT_BRANCH
   cache:
     policy: pull
     paths:
@@ -33,6 +39,9 @@ build:ui:
 
 build:client:
   stage: build
+  only:
+    - merge_requests
+    - $CI_DEFAULT_BRANCH
   cache:
     policy: pull
     paths:
@@ -46,6 +55,9 @@ build:client:
 
 test:
   stage: test
+  only:
+    - merge_requests
+    - $CI_DEFAULT_BRANCH
   script:
     - echo test
 
@@ -53,13 +65,9 @@ preview:
   stage: preview
   only:
     - merge_requests
+    - $CI_DEFAULT_BRANCH
   before_script:
     - npm install -g firebase-tools
-  needs:
-    - project: $CI_PROJECT_PATH
-      job: build:client
-      ref: $CI_COMMIT_REF_NAME
-      artifacts: true
   script:
     - firebase hosting:channel:deploy $CI_COMMIT_REF_SLUG --non-interactive --token=$FIREBASE_TOKEN
 
