--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,9 @@ stages:
   - preview
   - deploy
 
+before_script:
+  - npm install -g firebase-tools
+
 cache:
   paths:
     - node_modules/
@@ -18,7 +21,6 @@ initialize:
     - merge_requests
     - $CI_DEFAULT_BRANCH
   script:
-    - yarn
     - npx lerna bootstrap
 
 build:ui:
@@ -66,20 +68,16 @@ preview:
   only:
     - merge_requests
     - $CI_DEFAULT_BRANCH
-  before_script:
-    - npm install -g firebase-tools
   script:
-    - firebase hosting:channel:deploy $CI_COMMIT_REF_SLUG --non-interactive --token=$FIREBASE_TOKEN
+    - firebase hosting:channel:deploy $CI_COMMIT_REF_SLUG --non-interactive --token "$FIREBASE_TOKEN"
 
 deploy_client:
   stage: deploy
   only:
     refs:
       - $CI_DEFAULT_BRANCH
-  before_script:
-    - npm install -g firebase-tools
   script:
-    - firebase hosting:clone pyramid-64ab2:$CI_COMMIT_REF_SLUG pyramid-64ab2:live --non-interactive --token=$FIREBASE_TOKEN
+    - firebase hosting:clone pyramid-64ab2:$CI_COMMIT_REF_SLUG pyramid-64ab2:live --non-interactive --token "$FIREBASE_TOKEN"
 
 deploy_functions:
   stage: deploy
@@ -88,10 +86,8 @@ deploy_functions:
       - $CI_DEFAULT_BRANCH
     changes:
       - functions/**/*
-  before_script:
-    - npm install -g firebase-tools
   script:
     - cd functions
     - npm install
     - cd ..
-    - firebase deploy --only functions --non-interactive --token=$FIREBASE_TOKEN
+    - firebase deploy --only functions --non-interactive --token "$FIREBASE_TOKEN"
