--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,22 +13,27 @@ cache:
   paths:
     - node_modules/
 
+init-test:
+  stage: test
+  only:
+    - project-restructure
+  script:
+    - echo $CI_COMMIT_BRANCH
+    - echo $CI_DEFAULT_BRANCH
+    
 initialize:
   stage: initialize
   only:
     - merge_requests
-    - $CI_DEFAULT_BRANCH
+    - project-restructure
   script:
-    - echo $CI_DEFAULT_BRANCH
-    - echo $CI_MERGE_REQUEST_TARGET_BRANCH_NAME
-    - echo $CI_COMMIT_BRANCH
     - npx lerna bootstrap
 
 build:ui:
   stage: build
   only:
     - merge_requests
-    - $CI_DEFAULT_BRANCH
+    - project-restructure
   cache:
     policy: pull
     paths:
@@ -44,7 +49,7 @@ build:client:
   stage: build
   only:
     - merge_requests
-    - $CI_DEFAULT_BRANCH
+    - project-restructure
   cache:
     policy: pull
     paths:
@@ -60,7 +65,7 @@ test:
   stage: test
   only:
     - merge_requests
-    - $CI_DEFAULT_BRANCH
+    - project-restructure
   script:
     - echo test
 
@@ -68,7 +73,7 @@ preview:
   stage: preview
   only:
     - merge_requests
-    - $CI_DEFAULT_BRANCH
+    - project-restructure
   before_script:
     - npm install -g firebase-tools
   script:
@@ -78,7 +83,7 @@ deploy_client:
   stage: deploy
   only:
     refs:
-      - $CI_DEFAULT_BRANCH
+      - project-restructure
   before_script:
     - npm install -g firebase-tools
   script:
@@ -88,7 +93,7 @@ deploy_functions:
   stage: deploy
   only:
     refs:
-      - $CI_DEFAULT_BRANCH
+      - project-restructure
     changes:
       - functions/**/*
   before_script:
