--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,20 +20,20 @@ initialize:
   script:
     - npx lerna bootstrap -- --production
 
-build:ui:
-  stage: build
-  only:
-    - merge_requests
-  cache:
-    policy: pull
-    paths:
-      - node_modules/
-  script:
-    - npx lerna run --scope @pyramid/ui build --stream
-  artifacts:
-    name: "$CI_JOB_NAME"
-    paths:
-      - packages/ui/dist/
+# build:ui:
+#   stage: build
+#   only:
+#     - merge_requests
+#   cache:
+#     policy: pull
+#     paths:
+#       - node_modules/
+#   script:
+#     - npx lerna run --scope @pyramid/ui build --stream
+#   artifacts:
+#     name: "$CI_JOB_NAME"
+#     paths:
+#       - packages/ui/dist/
 
 build:client:
   stage: build
