--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ stages:
   - test
   - preview
   - deploy
+  - cleaning
 
 
 cache:
@@ -65,6 +66,15 @@ preview:
     - npm install -g firebase-tools
   script:
     - firebase hosting:channel:deploy $CI_COMMIT_REF_SLUG --non-interactive --token "$FIREBASE_TOKEN"
+    - echo "ENVIRONMENT_URL=$(firebase hosting:channel:open $CI_COMMIT_REF_SLUG --non-interactive | awk '{ print $3 }')" >> deploy.env
+  environment:
+    name: review/$CI_COMMIT_REF_NAME
+    url: $ENVIRONMENT_URL
+  variables:
+    ENVIRONMENT: staging
+  artifacts:
+    reports:
+      dotenv: deploy.env
 
 deploy_client:
   stage: deploy
@@ -74,7 +84,25 @@ deploy_client:
     - npm install -g firebase-tools
   script:
     - firebase hosting:clone pyramid-64ab2:$CI_COMMIT_REF_SLUG pyramid-64ab2:live --non-interactive --token "$FIREBASE_TOKEN"
+    - echo "ENVIRONMENT_URL=$(firebase hosting:channel:open live --non-interactive | awk '{ print $3 }')" >> deploy.env
+  variables:
+    ENVIRONMENT: production
+  environment:
+    name: production
+    url: $ENVIRONMENT_URL
+  artifacts:
+    reports:
+      dotenv: deploy.env
+
+stop_branch:
+  stage: cleaning
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  script:
     - firebase hosting:channel:delete -f $CI_COMMIT_REF_SLUG
+  environment:
+    name: review/$CI_COMMIT_REF_NAME
+    action: stop
 
 deploy_functions:
   stage: deploy
@@ -89,3 +117,5 @@ deploy_functions:
     - npm install
     - cd ..
     - firebase deploy --only functions --non-interactive --token "$FIREBASE_TOKEN"
+  environment:
+    name: production-functions
