--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,7 +85,7 @@ deploy_client:
     - npm install -g firebase-tools
   variables:
     ENVIRONMENT: production
-    PREV_COMMIT_REF_SLUG: echo $(git log -1 --no-merges --pretty='%D' | awk -F', ' '{print $2}')
+    PREV_COMMIT_REF_SLUG: echo $(git log --no-merges --pretty='%D' -1 | awk -F', ' '{print $2}')
   script:
     - firebase hosting:clone pyramid-64ab2:$PREV_COMMIT_REF_SLUG pyramid-64ab2:live --non-interactive --token "$FIREBASE_TOKEN"
     - echo "ENVIRONMENT_URL=$(firebase hosting:channel:open live --non-interactive | awk '{ print $3 }')" >> deploy.env
