ci: :green_heart: check on log

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,6 +87,8 @@ deploy_client:
     ENVIRONMENT: production
   script:
     - export PREV_COMMIT_REF_SLUG=$(git log --max-parents=1 --pretty='%D' -1 | awk -F', ' '{print $2}')
+    - echo $(git log --max-parents=1 --pretty='%D' -1)
+    - echo $PREV_COMMIT_REF_SLUG
     - firebase hosting:clone pyramid-64ab2:$PREV_COMMIT_REF_SLUG pyramid-64ab2:live --non-interactive --token "$FIREBASE_TOKEN"
     - echo "ENVIRONMENT_URL=$(firebase hosting:channel:open live --non-interactive | awk '{ print $3 }')" >> deploy.env
   environment:
