--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,8 +65,8 @@ preview:
   before_script:
     - npm install -g firebase-tools
   script:
-    - firebase hosting:channel:deploy $CI_COMMIT_REF_SLUG --non-interactive --token "$FIREBASE_TOKEN"
-    - echo "ENVIRONMENT_URL=$(firebase hosting:channel:open $CI_COMMIT_REF_SLUG --non-interactive | awk '{ print $3 }')" >> deploy.env
+    - firebase hosting:channel:deploy $CI_COMMIT_SHORT_SHA --non-interactive --token "$FIREBASE_TOKEN"
+    - echo "ENVIRONMENT_URL=$(firebase hosting:channel:open $CI_COMMIT_SHORT_SHA --non-interactive | awk '{ print $3 }')" >> deploy.env
   environment:
     name: review/$CI_COMMIT_REF_NAME
     url: $ENVIRONMENT_URL
@@ -86,12 +86,10 @@ deploy_client:
   variables:
     ENVIRONMENT: production
   script:
-    - export PREV_COMMIT_REF_SLUG=$(git log --no-merges --pretty='%D' -1 | awk -F', ' '{print $2}')
-    - echo $(git log)
-    - echo $(git log --no-merges)
-    - echo $(git log --no-merges --pretty='%D')
+    - export PREV_COMMIT_SHA=$(git log --no-merges --pretty='%H' -1) |head -c8
+    - firebase hosting:clone pyramid-64ab2:$PREV_COMMIT_SHA pyramid-64ab2:live --non-interactive --token "$FIREBASE_TOKEN"
+    - echo $(git log --no-merges --pretty='%H')
     - echo $PREV_COMMIT_REF_SLUG
-    - firebase hosting:clone pyramid-64ab2:$PREV_COMMIT_REF_SLUG pyramid-64ab2:live --non-interactive --token "$FIREBASE_TOKEN"
     - echo "ENVIRONMENT_URL=$(firebase hosting:channel:open live --non-interactive | awk '{ print $3 }')" >> deploy.env
   environment:
     name: production
@@ -105,7 +103,7 @@ stop_branch:
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   script:
-    - firebase hosting:channel:delete -f $CI_COMMIT_REF_SLUG
+    - firebase hosting:channel:delete -f $CI_COMMIT_SHORT_SHA
   environment:
     name: review/$CI_COMMIT_REF_NAME
     action: stop
