--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 default:
-  image: node:latest
+  # custom image from Dockerfile
+  image: $CI_REGISTRY_IMAGE/ci:latest
 
 stages:
   - initialize
@@ -7,20 +8,26 @@ stages:
   - test
   - preview
   - deploy
-  - cleaning
 
 
 cache:
   paths:
     - node_modules/
+    - "**/node_modules/"
 
 initialize:
   stage: initialize
   only:
-    - merge_requests
+    refs:
+      - merge_requests
+    # skip initialize if no change in package.json
+    changes:
+      - "**/package.json"
   script:
-    - npx lerna bootstrap -- --production
+    - lerna bootstrap -- --production
+    - firebase hosting:channel:open live --non-interactive
 
+# skip as no deployment for story book
 # build:ui:
 #   stage: build
 #   only:
@@ -45,7 +52,7 @@ build:client:
     paths:
       - node_modules/
   script:
-    - npx lerna run --scope @pyramid/client build --stream
+    - lerna run --scope @pyramid/client build --stream
   artifacts:
     name: "$CI_JOB_NAME"
     paths:
@@ -53,6 +60,7 @@ build:client:
 
 test:
   stage: test
+  cache: {}
   only:
     - merge_requests
   script:
@@ -62,15 +70,12 @@ preview:
   stage: preview
   only:
     - merge_requests
-  before_script:
-    - npm install -g firebase-tools
   script:
-    - firebase hosting:channel:deploy $CI_COMMIT_SHORT_SHA --non-interactive --token "$FIREBASE_TOKEN"
-    - echo "ENVIRONMENT_URL=$(firebase hosting:channel:open $CI_COMMIT_SHORT_SHA --non-interactive | awk '{ print $3 }')" >> deploy.env
+    - firebase hosting:channel:deploy $CI_COMMIT_REF_SLUG --non-interactive --token "$FIREBASE_TOKEN"
+    - echo "ENVIRONMENT_URL=$(firebase hosting:channel:open $CI_COMMIT_REF_SLUG --non-interactive | awk '{ print $3 }')" >> deploy.env
   environment:
     name: review/$CI_COMMIT_REF_NAME
     url: $ENVIRONMENT_URL
-    on_stop: stop_branch
   variables:
     ENVIRONMENT: staging
   artifacts:
@@ -81,16 +86,11 @@ deploy_client:
   stage: deploy
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-  before_script:
-    - npm install -g firebase-tools
   variables:
     ENVIRONMENT: production
   script:
-    - export PREV_COMMIT_SHA=$(git log --no-merges -1 | head -n1 | awk '{ print $2 }' | head -c8)
-    - firebase hosting:clone pyramid-64ab2:$PREV_COMMIT_SHA pyramid-64ab2:live --non-interactive --token "$FIREBASE_TOKEN"
-    - echo $(git log --no-merges -1 | head -n1)
-    - echo $(git log --no-merges -1 | head -n1 | awk '{ print $2 }')
-    - echo $PREV_COMMIT_REF_SLUG
+    - export PREV_COMMIT_SLUG=$(git log --pretty='%s' -1 | awk '{ print $3 }' | sed -e "s/^'//" -e "s/'$//")
+    - firebase hosting:clone pyramid-64ab2:$PREV_COMMIT_SLUG pyramid-64ab2:live --non-interactive --token "$FIREBASE_TOKEN"
     - echo "ENVIRONMENT_URL=$(firebase hosting:channel:open live --non-interactive | awk '{ print $3 }')" >> deploy.env
   environment:
     name: production
@@ -99,24 +99,13 @@ deploy_client:
     reports:
       dotenv: deploy.env
 
-stop_branch:
-  stage: cleaning
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-  script:
-    - firebase hosting:channel:delete -f $CI_COMMIT_SHORT_SHA
-  environment:
-    name: review/$CI_COMMIT_REF_NAME
-    action: stop
 
 deploy_functions:
   stage: deploy
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
       changes:
-        - functions/**/*
-  before_script:
-    - npm install -g firebase-tools
+        - functions/*
   script:
     - cd functions
     - npm install
