--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -29,8 +29,9 @@
   },
   "proxy": "http://localhost:5000",
   "scripts": {
-    "start": "SKIP_PREFLIGHT_CHECK=true REACT_APP_ENV=DEV craco start",
-    "build": "SKIP_PREFLIGHT_CHECK=true craco build"
+    "start": "cross-env SKIP_PREFLIGHT_CHECK=true craco start",
+    "build": "cross-env SKIP_PREFLIGHT_CHECK=true craco build"
+
   },
   "author": "",
   "license": "ISC",
