--- a/firebase.json
+++ b/firebase.json
@@ -5,8 +5,10 @@
   },
   "functions": {
     "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+      "npm --prefix \"$RESOURCE_DIR\" run lint",
+      "npm --prefix \"$RESOURCE_DIR\" run build"
+    ],
+    "source": "functions"
   },
   "hosting": {
     "public": "./packages/client/dist/",
@@ -29,7 +31,7 @@
     "firestore": {
       "port": 8081
     },
-    "functions":{
+    "functions": {
       "port": 5001
     },
     "ui": {
