--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "@craco/craco": "^6.1.1",
-    "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
     "@emotion/babel-plugin": "^11.2.0",
+    "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
@@ -14,10 +14,18 @@
     "@hookform/resolvers": "^1.3.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@pyramid/ui": "^0.0.0",
+    "@pyramid/ui": "0.0.0",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "craco-babel-loader": "^0.1.4",
-    "hover.css": "^2.3.2",
+    "firebase": "8.3.0",
+    "install": "^0.13.0",
+    "npm": "^7.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
@@ -25,13 +33,12 @@
     "react-scripts": "^4.0.3",
     "sass": "^1.32.8",
     "socket.io-client": "^3.1.3",
+    "typescript": "^4.2.4",
     "yup": "^0.32.9"
   },
-  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "cross-env SKIP_PREFLIGHT_CHECK=true craco start",
     "build": "cross-env SKIP_PREFLIGHT_CHECK=true craco build"
-
   },
   "author": "",
   "license": "ISC",
@@ -48,6 +55,9 @@
     ]
   },
   "devDependencies": {
+    "@types/material-ui": "^0.21.8",
+    "@types/moment": "^2.13.0",
+    "@types/react-router-dom": "^5.1.7",
     "eslint-plugin-prettier": "^3.3.1"
   }
 }
