--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -37,6 +37,10 @@
   },
   "dependencies": {
     "@emotion/react": "^11.1.5",
-    "polished": "^4.1.1"
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "polished": "^4.1.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
