--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,7 +14,7 @@
     "@hookform/resolvers": "^1.3.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@pyramid/ui": "0.0.0",
+    "@varp/ui": "0.0.0",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
