--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "@pyramid/ui",
+  "name": "@varp/ui",
   "version": "0.0.0",
   "description": "> TODO: description",
   "author": "Dylan Simowitz <git@dylan.simowitz.com>",
-  "homepage": "https://gitlab.com/pyramid-team/pyramid-mvp#readme",
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "lib/index",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -15,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@gitlab.com/pyramid-team/pyramid-mvp.git"
+    "url": "git@gitlab.com:pyramid-team/pyramid-mvp.git"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
