--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,10 +3,10 @@
   "tabWidth": 2,
   "useTabs": false,
   "semi": true,
-  "singleQuote": false,
-  "trailingComma": "none",
-  "bracketSpacing": true,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "bracketSpacing": false,
   "jsxBracketSameLine": false,
-  "arrowParens": "avoid",
+  "arrowParens": "always",
   "rangeStart": 0
 }
