--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,7 @@
 {
   "name": "functions",
   "scripts": {
-    "lint": "eslint --ext .js,.ts .",
+    "lint": "eslint --ext .js,.ts --fix",
     "build": "tsc",
     "build-lib": "npm run lint && tsc",
     "server": "npm run build && firebase emulators:start --only functions",
@@ -17,7 +17,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^9.6.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.13.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
