--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@gitlab.com:pyramid-team/pyramid-mvp.git"
+    "url": "git@gitlab.com:varp-team/varp-website.git"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
@@ -22,7 +22,7 @@
     "build": "build-storybook -o dist"
   },
   "bugs": {
-    "url": "https://gitlab.com/pyramid-team/pyramid-mvp/issues"
+    "url": "https://gitlab.com/varp-team/varp-website/issues"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.10",
