--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -34,7 +34,9 @@
     "sass": "^1.32.8",
     "socket.io-client": "^3.1.3",
     "typescript": "^4.2.4",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "mobx": "^2.5.1",
+    "mobx-react": "^3.5.5"
   },
   "scripts": {
     "start": "cross-env SKIP_PREFLIGHT_CHECK=true craco start",
