--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,7 +76,7 @@ preview:ui:
     paths:
       - node_modules/
   script:
-    - npx lerna run --scope @pyramid/ui chromatic --stream
+    - npx lerna run --scope @varp/ui chromatic --stream
   artifacts:
     name: "$CI_JOB_NAME"
     paths:
