--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,20 +67,21 @@ preview:client:
       dotenv: deploy.env
 
 
-preview:ui:
-  stage: preview:ui
-  only:
-    - merge_requests
-  cache:
-    policy: pull
-    paths:
-      - node_modules/
-  script:
-    - npx lerna run --scope @varp/ui chromatic --stream
-  artifacts:
-    name: "$CI_JOB_NAME"
-    paths:
-      - packages/ui/dist/
+# auto done by chromatic
+# preview:ui:
+#   stage: preview:ui
+#   only:
+#     - merge_requests
+#   cache:
+#     policy: pull
+#     paths:
+#       - node_modules/
+#   script:
+#     - npx lerna run --scope @varp/ui chromatic --stream
+#   artifacts:
+#     name: "$CI_JOB_NAME"
+#     paths:
+#       - packages/ui/dist/
 
 deploy_client:
   stage: deploy
