--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,18 +25,20 @@
     "craco-babel-loader": "^0.1.4",
     "firebase": "8.3.0",
     "install": "^0.13.0",
+    "mobx": "^2.5.1",
+    "mobx-react": "^3.5.5",
     "npm": "^7.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-spinners": "^0.10.6",
     "sass": "^1.32.8",
     "socket.io-client": "^3.1.3",
     "typescript": "^4.2.4",
     "yup": "^0.32.9",
-    "mobx": "^2.5.1",
-    "mobx-react": "^3.5.5"
+    "phaser": "3.15.1"
   },
   "scripts": {
     "start": "cross-env SKIP_PREFLIGHT_CHECK=true craco start",
