--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -18,5 +18,5 @@
     "noImplicitAny": false,
     "typeRoots": ["./node_modules/@types"]
   },
-  "include": ["src"]
+  "include": ["src", "../FlappyBird", "../games/FlappyBird/dist"]
 }
