--- a/functions/package.json
+++ b/functions/package.json
@@ -15,10 +15,7 @@
     "node": "12"
   },
   "main": "lib/index.js",
-  "dependencies": {
-    "firebase-admin": "^9.6.0",
-    "firebase-functions": "^3.13.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
@@ -26,7 +23,9 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.0",
     "firebase-functions-test": "^0.2.0",
-    "typescript": "^3.8.0"
+    "typescript": "^3.8.0",
+    "firebase-admin": "^9.7.0",
+    "firebase-functions": "^3.13.2"
   },
   "private": true
 }
