--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,10 @@
     "node": "12"
   },
   "main": "lib/index.js",
-  "dependencies": {},
+  "dependencies": {
+    "firebase-admin": "^9.7.0",
+    "firebase-functions": "^3.13.2"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
@@ -23,9 +26,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.0",
     "firebase-functions-test": "^0.2.0",
-    "typescript": "^3.8.0",
-    "firebase-admin": "^9.7.0",
-    "firebase-functions": "^3.13.2"
+    "typescript": "^3.8.0"
   },
   "private": true
 }
