--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -28,7 +28,9 @@
     "mobx": "^2.5.1",
     "mobx-react": "^3.5.5",
     "npm": "^7.9.0",
+    "phaser": "3.15.1",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
     "react-router-dom": "^5.2.0",
@@ -37,8 +39,7 @@
     "sass": "^1.32.8",
     "socket.io-client": "^3.1.3",
     "typescript": "^4.2.4",
-    "yup": "^0.32.9",
-    "phaser": "3.15.1"
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "cross-env SKIP_PREFLIGHT_CHECK=true craco start",
