--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -38,9 +38,11 @@
   "dependencies": {
     "@emotion/react": "^11.1.5",
     "@types/react": "^17.0.3",
+    "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-dom": "^17.0.3",
     "polished": "^4.1.1",
     "react": "^17.0.2",
+    "react-countdown-circle-timer": "^2.5.2",
     "react-dom": "^17.0.2"
   }
 }
