fix(eslint): :ambulance: skip children prop in button component

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,5 +13,8 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "prettier"]
+  "plugins": ["react", "prettier"],
+  "rules": {
+    "react/no-children-prop": "warn"
+  }
 }
