--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -37,12 +37,16 @@
   },
   "dependencies": {
     "@emotion/react": "^11.1.5",
+    "@hookform/resolvers": "^1.3.5",
     "@types/react": "^17.0.3",
     "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-dom": "^17.0.3",
     "polished": "^4.1.1",
     "react": "^17.0.2",
     "react-countdown-circle-timer": "^2.5.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^6.15.4",
+    "react-spinners": "^0.10.6",
+    "yup": "^0.32.9"
   }
 }
