ci: :green_heart: lowercase all slug name

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,7 +56,7 @@ preview:client:
     - merge_requests
   script:
     - firebase hosting:channel:deploy $CI_COMMIT_REF_SLUG --non-interactive --token "$FIREBASE_TOKEN"
-    - echo "ENVIRONMENT_URL=$(firebase hosting:channel:open $CI_COMMIT_REF_SLUG --non-interactive | awk '{ print $3 }')" >> deploy.env
+    - echo "ENVIRONMENT_URL=$(firebase hosting:channel:open $CI_COMMIT_REF_SLUG --non-interactive | awk '{ print tolower($3) }')" >> deploy.env
   environment:
     name: review/$CI_COMMIT_REF_NAME
     url: $ENVIRONMENT_URL
@@ -90,9 +90,9 @@ deploy_client:
   variables:
     ENVIRONMENT: production
   script:
-    - export PREV_COMMIT_SLUG=$(git log --pretty='%s' -1 | awk '{ print $3 }' | sed -e "s/^'//" -e "s/'$//")
+    - export PREV_COMMIT_SLUG=$(git log --pretty='%s' -1 | awk '{ print tolower($3) }' | sed -e "s/^'//" -e "s/'$//")
     - firebase hosting:clone varp-ba7a7:$PREV_COMMIT_SLUG varp-ba7a7:live --non-interactive --token "$FIREBASE_TOKEN"
-    - echo "ENVIRONMENT_URL=$(firebase hosting:channel:open live --non-interactive | awk '{ print $3 }')" >> deploy.env
+    - echo "ENVIRONMENT_URL=$(firebase hosting:channel:open live --non-interactive | awk '{ print tolower($3) }')" >> deploy.env
   environment:
     name: production
     url: $ENVIRONMENT_URL
